--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 <head>
     <title>Document</title>
     <link href="css/style.css" rel="stylesheet">
-    <meta name="viewport" content="width=1280, initial-scale=1">
+    <meta name="viewport" content="width=devide-width, initial-scale=1">
 
 </head>
 
