--- a/public/index.html
+++ b/public/index.html
@@ -25,11 +25,8 @@
             <button type="submit">Send</button>
         </form>
     </div>
+    <ul id="displayChat"> </ul>
 
-    <ul id="parentDisplay">
-        <div id="displayChat"></div>
-        <div id="ownChat"></div>
-    </ul>
 
 </body>
 
