--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
 
         <header id="headerName">
             <img src="img/logo.png" alt="Girl in a jacket">
-            <textarea id="typingPrompt"></textarea>
+            <p id="typingPrompt"></p>
         </header>
 
         <div class="modal" id="online">
