--- a/public/index.html
+++ b/public/index.html
@@ -93,6 +93,32 @@
     <script type="text/javascript " src="js/materialize.min.js "></script>
     <script type="text/javascript " src="js/select.js "></script>
 
+    <script>
+        window.fbAsyncInit = function() {
+            FB.init({
+                appId: 'BinarY',
+                cookie: true,
+                xfbml: true,
+                version: 'v7.0'
+            });
+
+            FB.AppEvents.logPageView();
+
+        };
+
+        (function(d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) {
+                return;
+            }
+            js = d.createElement(s);
+            js.id = id;
+            js.src = "https://connect.facebook.net/en_US/sdk.js";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+    </script>
+
+
 </body>
 
 </html>
