--- a/public/index.html
+++ b/public/index.html
@@ -44,8 +44,11 @@
                             <div class="form-field" style="padding:30px 0 30px 0">
                                 <button class="btn-large waves-effect waves-dark" style="width:100%;" type="submit">Enter</button>
                             </div>
-                            <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
-                            </fb:login-button>
+
+                            <div class="form-field">
+                                <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+                                </fb:login-button>
+                            </div>
                         </div>
                     </div>
                 </form>
