--- a/public/index.html
+++ b/public/index.html
@@ -16,26 +16,43 @@
 <body>
     <div class="page">
         <div id="roomJoin" class="modal">
-            <form id="roomForm" action="">
-                <h4>Join A Room</h4>
-                <input placeholder="Your Room Name" id="room_name" type="text" autofocus/>
+            <div class="col s12 m4 offset-m4">
+                <form id="roomForm" action="">
+                    <div class="cards" style="padding-bottom:50px">
+                        <div class="card-action teal lighten-1 white-text" style="padding:10px 0 10px 40px">
+                            <h4>Join A Room</h4>
+                        </div>
 
+                        <div class="card-content" style="padding:20px 40px 0 40px">
+                            <div class="form-field">
+                                <input placeholder="Your Room Name" id="room_name" type="text" autofocus/>
+                            </div><br>
 
-                <input placeholder="Your Room Password" id="room_pass" type="password" autofocus/>
+                            <div class="form-field">
+                                <input placeholder="Your Room Password" id="room_pass" type="password" autofocus/>
+                            </div><br>
 
-
-                <select id="room_purpose">
+                            <div class="form_field">
+                                <select id="room_purpose">
                                     <option value="" disabled selected>Room Option</option>
                                     <option value="1">Join Room</option>
                                     <option value="2">Create Room</option>
                                     <label>Materialize Select</label>
                                 </select>
+                            </div>
 
-                <button class="btn-large waves-effect waves-dark" style="width:100%;" type="submit">Enter</button>
-                <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
-                </fb:login-button>
-            </form>
+                            <div class="form-field" style="padding:30px 0 30px 0">
+                                <button class="btn-large waves-effect waves-dark" style="width:100%;" type="submit">Enter</button>
+                            </div>
 
+                            <div class="form-field">
+                                <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+                                </fb:login-button>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
         </div>
 
         <div id="nameAccept" class="modal">
