--- a/public/index.html
+++ b/public/index.html
@@ -15,36 +15,45 @@
 <body>
 
     <script>
+        function statusChangeCallback(response) { // Called with the results from FB.getLoginStatus().
+            console.log('statusChangeCallback');
+            console.log(response); // The current login status of the person.
+            if (response.status === 'connected') { // Logged into your webpage and Facebook.
+                testAPI();
+            } else { // Not logged into your webpage or we are unable to tell.
+                document.getElementById('status').innerHTML = 'Please log ' +
+                    'into this webpage.';
+            }
+        }
+
+
+        function checkLoginState() { // Called when a person is finished with the Login Button.
+            FB.getLoginStatus(function(response) { // See the onlogin handler
+                statusChangeCallback(response);
+            });
+        }
+
+
         window.fbAsyncInit = function() {
             FB.init({
-                appId: 'kikorcho',
-                cookie: true,
-                xfbml: true,
-                version: 'v7.0'
+                appId: '{app-id}',
+                cookie: true, // Enable cookies to allow the server to access the session.
+                xfbml: true, // Parse social plugins on this webpage.
+                version: '{api-version}' // Use this Graph API version for this call.
             });
 
 
-            FB.getLoginStatus(function(response) {
-                console.log(response);
+            FB.getLoginStatus(function(response) { // Called after the JS SDK has been initialized.
+                statusChangeCallback(response); // Returns the login status.
             });
-
         };
 
-        (function(d, s, id) {
-            var js, fjs = d.getElementsByTagName(s)[0];
-            if (d.getElementById(id)) {
-                return;
-            }
-            js = d.createElement(s);
-            js.id = id;
-            js.src = "https://connect.facebook.net/en_US/sdk.js";
-            fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));
-
-
-        function checkLoginState() {
-            FB.getLoginStatus(function(response) {
-                statusChangeCallback(response);
+        function testAPI() { // Testing Graph API after login.  See statusChangeCallback() for when this call is made.
+            console.log('Welcome!  Fetching your information.... ');
+            FB.api('/me', function(response) {
+                console.log('Successful login for: ' + response.name);
+                document.getElementById('status').innerHTML =
+                    'Thanks for logging in, ' + response.name + '!';
             });
         }
     </script>
@@ -89,6 +98,9 @@
                     </div>
                 </form>
             </div>
+        </div>
+
+        <div id="status">
         </div>
 
         <div id="nameAccept" class="modal">
