--- a/public/index.html
+++ b/public/index.html
@@ -91,7 +91,7 @@
                             </div>
 
                             <div class="form-field">
-                                <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+                                <fb:login-button size="medium" scope="public_profile,email" onlogin="checkLoginState();">
                                 </fb:login-button>
                             </div>
                         </div>
