--- a/public/index.html
+++ b/public/index.html
@@ -91,7 +91,7 @@
                             </div>
 
                             <div class="form-field">
-                                <fb:login-button size="medium" scope="public_profile,email" onlogin="checkLoginState();"> Connect with Fb
+                                <fb:login-button show-faces="true" width="200" max-rows="1" scope="public_profile,email" onlogin="checkLoginState();"> Connect with Fb
                                 </fb:login-button>
                             </div>
                         </div>
