--- a/public/index.html
+++ b/public/index.html
@@ -91,7 +91,7 @@
                             </div>
 
                             <div class="form-field">
-                                <fb:login-button show-faces="true" width="200" max-rows="1" scope="public_profile,email" onlogin="checkLoginState();"> Connect with Fb
+                                <fb:login-button show-faces="true" width="200" max-rows="1" background="dark" length="long" scope=" public_profile,email " onlogin="checkLoginState(); "> Connect with Fb
                                 </fb:login-button>
                             </div>
                         </div>
@@ -100,41 +100,41 @@
             </div>
         </div>
 
-        <div id="status">
+        <div id="status ">
         </div>
 
-        <div id="nameAccept" class="modal">
-            <form id="nameForm" action="" style="padding:40px;">
+        <div id="nameAccept " class="modal ">
+            <form id="nameForm " action=" " style="padding:40px; ">
                 <h4>Your name</h4>
-                <i class="material-icons prefix">person_pin</i>
-                <input placeholder="Your name here" id="full_name" type="text" autofocus/>
-                <button class="btn waves-effect waves-light cyan" type="submit">Submit
-                <i class="material-icons right">send</i></button>
+                <i class="material-icons prefix ">person_pin</i>
+                <input placeholder="Your name here " id="full_name " type="text " autofocus/>
+                <button class="btn waves-effect waves-light cyan " type="submit ">Submit
+                <i class="material-icons right ">send</i></button>
             </form>
         </div>
 
 
-        <header id="headerName">
-            <img src="img/logo.png" alt="Girl in a jacket">
-            <p id="typingPrompt"></p>
+        <header id="headerName ">
+            <img src="img/logo.png " alt="Girl in a jacket ">
+            <p id="typingPrompt "></p>
         </header>
 
-        <div class="modal" id="online">
-            <div class="modal-content">
+        <div class="modal " id="online ">
+            <div class="modal-content ">
                 <h4>Online</h4>
                 <br>
-                <ul id="is_online"></ul>
+                <ul id="is_online "></ul>
             </div>
         </div>
 
 
-        <div id="bot" action="POST">
-            <form id="formChat" method="POST" action="/">
-                <input id="userResponse" name="userText" type="text" autofocus/>
-                <button type="submit">Send</button>
+        <div id="bot " action="POST ">
+            <form id="formChat " method="POST " action="/ ">
+                <input id="userResponse " name="userText " type="text " autofocus/>
+                <button type="submit ">Send</button>
             </form>
         </div>
-        <ul id="displayChat"> </ul>
+        <ul id="displayChat "> </ul>
     </div>
 
 
