--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
         <div id="roomJoin" class="modal">
             <div class="col s12 m4 offset-m4">
                 <form id="roomForm" action="">
-                    <div class="cards" style="padding-bottom:50px">
+                    <div class="cards">
                         <div class="card-action teal lighten-1 white-text" style="padding:10px 0 10px 40px">
                             <h4>Join A Room</h4>
                         </div>
@@ -93,9 +93,6 @@
                     </div>
                 </form>
             </div>
-        </div>
-
-        <div id="status ">
         </div>
 
         <div id="nameAccept " class="modal ">
