--- a/public/index.html
+++ b/public/index.html
@@ -107,7 +107,7 @@
                 <h4>Your name</h4>
                 <i class="material-icons prefix">person_pin</i>
                 <input placeholder="Your name here" id="full_name" type="text" autofocus/>
-                <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+                <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">FB LOGIN
                 </fb:login-button>
                 <div id="status">
                 </div>
