--- a/public/index.html
+++ b/public/index.html
@@ -107,8 +107,8 @@
                 <h4>Your name</h4>
                 <i class="material-icons prefix">person_pin</i>
                 <input placeholder="Your name here" id="full_name" type="text" autofocus/>
-                <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">FB LOGIN
-                </fb:login-button>
+                <button><fb:login-button scope="public_profile,email" onlogin="checkLoginState();">FB LOGIN
+                </fb:login-button></button>
                 <div id="status">
                 </div>
                 <button class="btn waves-effect waves-light cyan" type="submit">Submit
