--- a/public/index.html
+++ b/public/index.html
@@ -53,18 +53,12 @@
         </div>
 
         <div id="nameAccept" class="modal">
-            <form id="nameForm" action="" style="padding:40px;">
+            <form id="nameForm" action="#" style="padding:40px;">
                 <h4>Your name</h4>
                 <i class="material-icons prefix">person_pin</i>
                 <input placeholder="Your name here" id="full_name" type="text" autofocus/>
-
-                <div class="form-field center-align" style="padding:30px 0 30px 0">
-                    <button class="blue" id="clicker">Login with FB</button>
-                </div>
-
-                <div id="status">
-                </div>
-                <button class="btn waves-effect waves-light cyan" type="submit">Submit
+                <button id="nameFb" class="blue btn waves-effect" type="submit">Login with FB</button>
+                <button id="nameManual" class="btn waves-effect waves-light cyan" type="submit">Submit
                 <i class="material-icons right">send</i></button>
             </form>
         </div>
