--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
         </div>
 
         <div id="nameAccept" class="modal">
-            <form id="nameForm" action="#" style="padding:40px;">
+            <form id="nameForm" action="" style="padding:40px;">
                 <h4>Your name</h4>
                 <i class="material-icons prefix">person_pin</i>
                 <input placeholder="Your name here" id="full_name" type="text" autofocus/>
